# evi-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  Dockerfile  EVI.md  FEATURES.md  HANDOFF.md  LICENSE  README.md  TESTING.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/evi-run/: action.yml
.github/workflows/: ci.yml  desktop-release.yml  docker.yml  docs-publish.yml  e2e.yml  evi-run-example.yml  pages.yml  release.yml  security.yml
desktop/: README.md  package-lock.json  package.json
desktop/dist-shim/: index.html
desktop/src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json  tauri.standalone.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  sidecar_update.rs
docs/: architecture.md  claude-code-comparison.md  cli-parity.md  code-signing.md  commands.md  configuration.md  desktop-bundling.md  development.md  features.md  future-integrations.md  multi-machine.md  releasing.md  roadmap.md  sdk-coverage.md  sdk.md  self-build.md  self-update.md  tools.md  troubleshooting.md
docs/features/: README.md  agents.md  automation.md  evals.md  guardrails.md  hooks.md  mcp.md  memory-context.md  observability.md  permissions-and-sandbox.md  plugins.md  sessions.md  skills.md  slash-commands.md  structured-and-batch.md  ultracode.md  voice.md  web-desktop.md
editors/vscode/: .vscodeignore  README.md  package.json
editors/vscode/src/: extension.ts
evi/: __init__.py  __main__.py  a2a.py  anatomy.py  audio_input.py  backup.py  batch.py  bugledger.py  calendar.py  capabilities.py  checkpoints.py  citations.py  codeintel.py  commands.py  complete.py  config.py  configlint.py  context_report.py  debug.py  deeplinks.py  diarize.py  doclayout.py  doctor.py  downloads.py  dream.py  embedcap.py  embeddings.py  evals.py  federation.py  finetune.py  firstrun.py  guardmodel.py  guardrails.py  hardware.py  headless.py  hooks.py  index.py  keybindings.py  marketplace.py  memory.py  (+46 more)
evi/apps/cli/: main.py
evi/apps/web/: mdlite.py  server.py
evi/apps/web/static/: index.html  manifest.json
evi/backends/: __init__.py  amp_agent.py  base.py  claude_agent.py  codex_agent.py  copilot_agent.py  factory.py  gemini_agent.py  llamacpp.py  lmstudio.py  ollama.py  openai_compat.py  presets.py  qwen_agent.py  registry.py
evi/data/: models-catalog.json
evi/llm/: agent.py  amp_agent.py  claude_agent.py  cli_agent.py  client.py  codex_agent.py  copilot_agent.py  gemini_agent.py  qwen_agent.py  responses.py  specialty.py  subagent.py
evi/mcp/: __init__.py  bridge.py  manager.py  publish.py  servers.py
evi/sdk/: __init__.py  builder.py
evi/tools/: __init__.py  ask.py  base.py  bugledger.py  calendar.py  code.py  computer.py  federation.py  fs.py  git.py  image_comfy.py  index.py  memory.py  monitor.py  ocr.py  pdf.py  rerank.py  resolver.py  shell.py  skills.py  sqlite.py  subagent.py  vision_tool.py  voice.py  websearch.py
examples/: EVI.md  README.md  guardrails.toml  hooks.toml  mcp.json  peers.json  routes.json
examples/commands/: commit.md
examples/github/: pr-review.yml
examples/python/: README.md  custom_tool.py  headless_ci.py  quickstart.py  streaming.py  structured_output.py  subagents.py
examples/skills/code-review/: SKILL.md
examples/skills/sql-explain/: SKILL.md
examples/skills/summarize-paper/: SKILL.md
examples/styles/: concise.md
scripts/: build-desktop.ps1  build-desktop.sh  build-sidecar-manifest.py  build-sidecar.ps1  build-sidecar.sh  build-site-docs.py  build-wiki.py  evi-tools.ps1  evi-tools.sh  evi_tools.py  install.ps1  install.sh  set-desktop-version.py  sidecar_entry.py  site-docs.css  test.ps1  test.sh  zip-sidecar.py
site/: index.html  styles.css
tests/: conftest.py  test_a2a.py  test_add_dir.py  test_agent.py  test_amp_agent.py  test_apply_patch.py  test_ask_tool.py  test_automation_api.py  test_autospeaker.py  test_backend_cli.py  test_backend_status.py  test_backends.py  test_backends_registry.py  test_backup.py  test_bang_command.py  test_batch.py  test_batch_a.py  test_batch_b.py  test_batch_c.py  test_bootstrap.py  test_calendar.py  test_capabilities.py  test_channels.py  test_checkpoints.py  test_citations.py  test_claude_agent.py  test_cli_agent.py  test_codeintel.py  test_codex_agent.py  test_commands.py  test_complete.py  test_console_encoding.py  test_context_report.py  test_context_window.py  test_copilot_agent.py  test_debug.py  test_deeplinks.py  test_dispatch.py  test_downloads.py  test_dream.py  (+107 more)
tests/cli_e2e/: conftest.py  test_cli_e2e.py
tests/e2e/: conftest.py  test_federation_network.py  test_ollama_chat.py  test_ui_features.py  test_ui_smoke.py
