[package]
name = "evi-desktop"
version = "1.0.5"
description = "eVi — desktop shell"
authors = ["eVi"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# Desktop-only binary crate — the whole app is in src/main.rs. (No [lib]
# target: that's the create-tauri-app mobile template's lib split, which we
# don't use. A [lib] here would require a src/lib.rs that doesn't exist.)

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# tray-icon: system tray; image-png: load the tray icon; devtools: keep
# View → Toggle Developer Tools available in release builds too.
tauri = { version = "2.0", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-deep-link = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"   # read [federation] bind_lan from config.toml at spawn
ureq = "2"
url = "2"
# Sidecar update channel (sidecar_update.rs): verify the minisign-signed manifest,
# sha256-check the zip, and extract the onedir into a writable dir.
minisign-verify = "0.2"
sha2 = "0.10"
base64 = "0.22"  # decode the tauri-signer manifest signature before minisign-verify
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
